--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/ws4j-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/abstract_wordnet.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
