--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,10 @@
 			<artifactId>morpha-stemmer</artifactId>
 			<version>1.0.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.languagetool</groupId>
+			<artifactId>language-en</artifactId>
+			<version>3.2</version>
+		</dependency>
 	</dependencies>
 </project>
