--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,10 @@
 			<artifactId>language-en</artifactId>
 			<version>3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
 	</dependencies>
 </project>
