--- a/pom.xml
+++ b/pom.xml
@@ -73,5 +73,10 @@
 			<artifactId>guava</artifactId>
 			<version>19.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>3.4</version>
+		</dependency>
 	</dependencies>
 </project>
